# python-fiddle

./: .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  logging.json  pyproject.toml  pytest.ini  setup.cfg
fiddle/: __main__.py  app.py  itertools_cycle.py  print_n_lines_after_match.py  slices.py
tests/: conftest.py  test_app.py
