[tool.poetry]
name = "fiddle"
version = "0.1.0"
description = "Fiddling with bits of python. Does not actually do anything useful"
authors = ["Alex M <alex@mosstech.io>"]

[tool.poetry.scripts]
fiddle = "fiddle.app:app"

[tool.poetry.dependencies]
python = "^3.9"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
